--- a/css/dropdownStyle.css
+++ b/css/dropdownStyle.css
@@ -54,13 +54,13 @@
 
   @media screen and (max-width:768px) {
     .dropdown-content {
-      position: flex;
+      position: absolute;
       background-color: #f1f1f1;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       top: 150%;
       left: 0;
+      right: 0;
       width: 150px;
-      align-items: center;
       opacity: 0;
       /* make submenu not hoverable when opacity transition finished,
        * do this instantaneously */
