--- a/css/carouselStyle.css
+++ b/css/carouselStyle.css
@@ -69,8 +69,9 @@ body {
     opacity: 0.45; 
 }
 
-.vividworknav:hover .work-text-content {
-    opacity: 1 !important; 
+.vividworknav:hover .black-curtain .work-text-content {
+    opacity: 1; 
+
 }
 
 
@@ -88,7 +89,8 @@ body {
     left: 65px;
     top: 20%;
     position: relative;
-    color: white;
+    color: rgb(255, 255, 255);
+    -webkit-text-stroke: 0.5px black;
     font-size: 24px;
     text-align: left;
     opacity: 0;
