--- a/css/navStyle.css
+++ b/css/navStyle.css
@@ -96,14 +96,12 @@ nav::before {
         height: 92vh;
         width: 45%;
         top: 8vh;
-        background-color: white;
+        background-color: rgb(255, 255, 255, 0.89);
         display: flex;
         flex-direction: column;
-       
         align-items: center;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-        opacity: 0.89;
         z-index: 1 !important;
     }
 
