--- a/css/linksUnderline.css
+++ b/css/linksUnderline.css
@@ -33,3 +33,8 @@
   width: 90%;
     transition: 0.3s ease all;
 }
+
+.strokeme {
+    color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
